# arb_poc

./: .gitignore  CLAUDE.md  Cargo.toml  config.example.toml  strategy.example.toml  strategy.toml
.claude/: settings.json
.claude/agents/: coder.md  trader.md
.claude/skills/: comment.md
.claude/skills/bithumb-api/: SKILL.md
.claude/skills/bithumb-api/references/: index.md
.claude/skills/bybit-v5-api/: SKILL.md
.claude/skills/bybit-v5-api/references/: account.md  asset.md  broker.md  other.md  position.md  reference.md  sbe.md  user_management.md  websocket.md
.claude/skills/upbit-api/: SKILL.md
.claude/skills/upbit-api/references/: exchange_order.md  index.md  other.md
.codex/: settings.local.json
.codex/agents/: coder.md  reviewer.md  supervisor.md
.codex/skills/: logging.md
.codex/skills/bithumb-api/references/: other.md  overview.md
.codex/skills/bybit-v5-api/references/: crypto_loan.md  earn.md  index.md  institutional_loan.md  introduction.md  market_data.md  rfq_trading.md  spot_margin_uta.md  trading.md
.codex/skills/upbit-api/references/: exchange_deposit.md  exchange_withdrawal.md  quotation.md  websocket.md
.github/: git-commit-instructions.md
crates/arb-config/: Cargo.toml
crates/arb-config/src/: error.rs  lib.rs
crates/arb-db/: Cargo.toml
crates/arb-db/migrations/: V001__create_sessions.sql  V002__create_positions.sql  V003__create_trades.sql  V004__create_minutes.sql  V005__create_alerts.sql  V006__create_funding_schedules.sql  V007__create_balance_snapshots.sql  V008__add_minutes_unique_session_coin_ts.sql
crates/arb-db/src/: alerts.rs  balance_snapshots.rs  error.rs  funding.rs  lib.rs  migration.rs  minutes.rs  pool.rs  positions.rs  sessions.rs  trades.rs  writer.rs
crates/arb-exchange/: Cargo.toml
crates/arb-exchange/src/: adapter.rs  error.rs  lib.rs  manager.rs  market.rs  stream.rs  traits.rs  types.rs
crates/arb-exchanges/: Cargo.toml
crates/arb-exchanges/src/: factory.rs  lib.rs  rate_limit.rs
crates/arb-exchanges/src/bithumb/: auth.rs  client.rs  mod.rs  types.rs
crates/arb-exchanges/src/bybit/: auth.rs  client.rs  mod.rs  stream.rs  types.rs
crates/arb-exchanges/src/upbit/: auth.rs  client.rs  mod.rs  stream.rs  types.rs
crates/arb-forex/: Cargo.toml
crates/arb-forex/src/: lib.rs
crates/arb-logging/: Cargo.toml
crates/arb-logging/src/: lib.rs
crates/arb-strategy/: Cargo.toml
crates/arb-strategy/src/: error.rs  lib.rs
crates/arb-strategy/src/common/: candle_fetcher.rs  candle_window.rs  convert.rs  fee.rs  mod.rs  statistics.rs
crates/arb-strategy/src/output/: console.rs  csv.rs  mod.rs  summary.rs  writer.rs
crates/arb-strategy/src/zscore/: alert.rs  balance.rs  balance_recorder.rs  coin_selector.rs  config.rs  execution_policy.rs  instrument.rs  live_executor.rs  mod.rs  monitor.rs  monitor_core.rs  monitor_live.rs  monitor_sim.rs  orderbook.rs  pnl.rs  position.rs  position_store.rs  risk.rs  signal.rs  simulator.rs  slippage.rs  spread.rs  sweep.rs
crates/arb-telegram/: Cargo.toml
crates/arb-telegram/src/: client.rs  error.rs  lib.rs  types.rs
examples/: bithumb_private.rs  bithumb_public.rs  bybit_private.rs  bybit_public.rs  db_probe.rs  exchange_manager.rs  migrate.rs  telegram.rs  upbit_moodeng_min_roundtrip.rs  upbit_private.rs  upbit_public.rs  zscore_backtest.rs  zscore_monitor.rs  zscore_parameter_sweep.rs  zscore_sim.rs
spec/: 0000_Z_SCORE_STRATEGY_SIMULATE.md  0000_Z_SCORE_STRATEGY_SIMULATE_plan.md  0001_BACKTEST_PARAMETER_SWEEP.md  0002_SLIPPAGE_PROFITABILITY_GATE.md  0003_AUTO_COIN_SELECTION.md  0004_USD_RATE_AND_TICK_SIGNALS.md  0005_SESSION_OUTPUT.md  0006_ORDERBOOK_SLIPPAGE_POSITION_SIZING.md  0007_EVENT_LOOP_ASYNC_DECOUPLING.md  0008_TICK_LOT_SIZE_ROUNDING.md  0009_COIN_SELECTION_SPREAD_STDDEV_FILTER.md  0010_MIN_PROFIT_POSITION_FILTER.md  0011_LIVE_TRADING.md  0012_BALANCE_SNAPSHOT.md  0013_LIVE_DEBUG.md
src/: adapter.rs  lib.rs  main.rs
src/config/: mod.rs
src/exchange/: adapter.rs  error.rs  factory.rs  manager.rs  market.rs  mod.rs  traits.rs  types.rs
src/exchanges/: mod.rs
src/exchanges/bithumb/: auth.rs  client.rs  mod.rs  types.rs
src/exchanges/bybit/: auth.rs  client.rs  mod.rs  types.rs
src/exchanges/upbit/: auth.rs  client.rs  mod.rs  types.rs
src/logging/: mod.rs
