[workspace]
resolver = "2"
members = [
    "crates/arb-config",
    "crates/arb-logging",
    "crates/arb-telegram",
    "crates/arb-exchange",
    "crates/arb-exchanges",
    "crates/arb-forex",
    "crates/arb-strategy",
    "crates/arb-db",
]

[package]
name = "arb_poc"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace crates
arb-config = { path = "crates/arb-config" }
arb-logging = { path = "crates/arb-logging" }
arb-telegram = { path = "crates/arb-telegram" }
arb-exchange = { path = "crates/arb-exchange" }
arb-exchanges = { path = "crates/arb-exchanges" }
arb-forex = { path = "crates/arb-forex" }
arb-strategy = { path = "crates/arb-strategy" }
arb-db = { path = "crates/arb-db" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

# JSON serialization
serde_json = { workspace = true }

# Decimal precision for financial calculations
rust_decimal = { workspace = true }

# Time handling
chrono = { workspace = true }

# Cancellation token for graceful shutdown
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.6"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["arb_poc team"]
license = "MIT"
repository = "https://github.com/example/arb_poc"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT authentication
jsonwebtoken = "9.3"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# SHA256/SHA512 hashing and HMAC
sha2 = "0.10"
hmac = "0.12"

# URL encoding
url = "2.5"

# Error handling
thiserror = "2.0"

# Async trait for object-safe async traits
async-trait = "0.1"

# Decimal precision for financial calculations
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }

# Configuration
config = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

# WebSocket (for future use)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding
hex = "0.4"

# CSV parsing
csv = "1.3"

# TOML parsing
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "rust_decimal"] }

[[example]]
name = "upbit_public"
path = "examples/upbit_public.rs"

[[example]]
name = "upbit_private"
path = "examples/upbit_private.rs"

[[example]]
name = "bithumb_public"
path = "examples/bithumb_public.rs"

[[example]]
name = "bithumb_private"
path = "examples/bithumb_private.rs"

[[example]]
name = "bybit_public"
path = "examples/bybit_public.rs"

[[example]]
name = "bybit_private"
path = "examples/bybit_private.rs"

[[example]]
name = "exchange_manager"
path = "examples/exchange_manager.rs"

[[example]]
name = "telegram"
path = "examples/telegram.rs"

[[example]]
name = "zscore_monitor"
path = "examples/zscore_monitor.rs"

[[example]]
name = "zscore_sim"
path = "examples/zscore_sim.rs"

[[example]]
name = "migrate"
path = "examples/migrate.rs"
