[package]
name = "arb-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MySQL persistence layer for arb_poc live trading"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "rust_decimal"] }
tokio = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
