[package]
name = "arb-exchange"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Exchange abstraction layer for arb_poc"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
