[package]
name = "arb-exchanges"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Exchange SDK implementations for arb_poc"

[dependencies]
arb-config = { path = "../arb-config" }
arb-exchange = { path = "../arb-exchange" }
async-trait = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
