[package]
name = "arb-forex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "USD/KRW forex rate cache using Yahoo Finance"

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
