[package]
name = "arb-strategy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Trading strategy implementations for arb_poc"

[dependencies]
arb-exchange = { path = "../arb-exchange" }
chrono = { workspace = true }
csv = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tokio-util = "0.7"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
