[package]
name = "arb-strategy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Trading strategy implementations for arb_poc"

[dependencies]
arb-exchange = { path = "../arb-exchange" }
arb-forex = { path = "../arb-forex" }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
parking_lot = "0.12"
tokio-util = "0.7"
tracing = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
tempfile = "3"
