[package]
name = "arb-telegram"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Telegram notification client for arb_poc"

[dependencies]
arb-config = { path = "../arb-config" }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
